--- a/portfolio.html
+++ b/portfolio.html
@@ -111,8 +111,8 @@
                       </div>
                   </a>
                   <div class="text">
-                      <h4 class="subheading">Angles-Only Orbit Determination</h4>
-                      <h2 class="heading"><a href="portfolio-single.html">Collection of scripts</a></h2>
+                      <h4 class="subheading">Spaceflight Mechanics</h4>
+                      <h2 class="heading"><a href="portfolio-single.html">Angles-Only Orbit Determination</a></h2>
                       <p>This project was for my Spaceflight Mechanics class my junior year of undergrad. The project was of my own choosing and explores how to determine the orbits of unknown objects.</p>
                       <p><a href="project-3.html">View Project</a></p>
                   </div>
@@ -124,7 +124,7 @@
                       </div>
                   </a>
                   <div class="text order-1">
-                      <h4 class="subheading">IoT Rover</h4>
+                      <h4 class="subheading">Undergraduate Research</h4>
                       <h2 class="heading"><a href="portfoli-singleo.html">Additive Welding</a></h2>
                       <p>Additive welding was the focus of a research project that I spear-headed between my junior and senior years of undergrad. The focus was to explore the feasibility of 3D printing in molten metal.</p>
                       <p><a href="project-4.html">View Project</a></p>
