--- a/resume.html
+++ b/resume.html
@@ -533,6 +533,7 @@
                 <ul class="ftco-footer-social list-unstyled">
                     <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
                     <li><a href="https://www.linkedin.com/in/johnathan-corbin-058077147/"><span class="icon-linkedin"></span></a></li>
+                    <li><a href="https://github.com/J-Corbin"><span class="icon-github"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
