--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
                   </div>
               </div>
               <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                  <a href="project-4.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                  <a href="project-4.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/additive.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
                       <div class="icon d-flex text-center justify-content-center align-items-center">
                           <span class="icon-search"></span>
                       </div>
