--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   <p>I moved across the country when I was 18 to pursue Aerospace Engineering in hopes of one day helping send humanity to distant planets. Here are some of the things I've done since then.</p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
-                      <li><a href="https://www.linkedin.com/in/johnathan-corbin-058077147/"><span class="icon-linked"></span></a></li>
+                      <li><a href="https://www.linkedin.com/in/johnathan-corbin-058077147/"><span class="icon-linkedin"></span></a></li>
                       <li><a href="https://github.com/J-Corbin"><span class="icon-github"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
@@ -273,6 +273,7 @@
                 <ul class="ftco-footer-social list-unstyled">
                     <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
                     <li><a href="https://www.linkedin.com/in/johnathan-corbin-058077147/"><span class="icon-linkedin"></span></a></li>
+                    <li><a href="https://github.com/J-Corbin"><span class="icon-github"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
