--- a/resume.html
+++ b/resume.html
@@ -83,6 +83,7 @@
                                 <ul class="ftco-footer-social list-unstyled mt-4">
                                     <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
                                     <li><a href="https://www.linkedin.com/in/johnathan-corbin-058077147/"><span class="icon-linkedin"></span></a></li>
+                                    <li><a href="https://github.com/J-Corbin"><span class="icon-github"></span></a></li>
                                 </ul>
                                 <h5>Contact me here!</h5>
                                 <p>Email: <a href="#">corbij@rpi.edu</a></p>
