--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Marble &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
+	<title>Website for Johnathan Corbin</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Portfolio for Johnathan Corbin" />
 	<meta name="keywords" content="portfolio, johnathan corbin, engineering, resume, employment, projects, school, skills" />
@@ -115,7 +115,7 @@
 			</aside>
 
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Services</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Highlights</h2>
 				<div class="row">
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
@@ -123,7 +123,7 @@
 								<i class="icon-settings"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>Strategy</h3>
+								<h3>Engineering</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 						</div>
@@ -134,7 +134,7 @@
 								<i class="icon-search4"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>Explore</h3>
+								<h3>Curiosity</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 						</div>
@@ -146,7 +146,7 @@
 								<i class="icon-paperplane"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>Direction</h3>
+								<h3>Aero/Astrodynamics</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 						</div>
@@ -157,7 +157,7 @@
 								<i class="icon-params"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>Expertise</h3>
+								<h3>Computer Skills</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 						</div>
@@ -214,6 +214,7 @@
 				</div>
 			</div>
 
+<!--
 			<div id="get-in-touch">
 				<div class="fh5co-narrow-content">
 					<div class="row">
@@ -230,6 +231,7 @@
 					</div>
 				</div>
 			</div>
+			-->
 		</div>
 	</div>
 
